refactors and also the home page works now
