# scale/openapi.json
@@ -1,158 +1,235 @@
 {
-  "openapi": "3.1.0",
-  "info": {
-    "title": "scale-api",
-    "description": "",
-    "license": {
-      "name": ""
-    },
-    "version": "0.1.0"
-  },
-  "paths": {
-    "/": {
-      "get": {
-        "operationId": "index",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/.well-known/health-check": {
-      "get": {
-        "summary": "Get health of the API.",
-        "operationId": "health_check",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/auth/login": {
-      "post": {
-        "tags": [
-          "auth"
-        ],
-        "summary": "Login",
-        "operationId": "login",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/LoginBody"
-              }
-            }
-          },
-          "required": true
+    "openapi": "3.1.0",
+    "info": {
+        "title": "scale-api",
+        "description": "",
+        "license": {
+            "name": ""
         },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
+        "version": "0.1.0"
     },
-    "/api/v1/auth/signup": {
-      "post": {
-        "tags": [
-          "auth"
-        ],
-        "summary": "Sign up",
-        "operationId": "signup",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/SignupBody"
-              }
-            }
-          },
-          "required": true
+    "servers": [
+        {
+            "url": "http://localhost:8080"
         },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
+        {
+            "url": "https://api.scale.com"
+        }
+    ],
+    "paths": {
+        "/": {
+            "get": {
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
                 }
-              }
             }
-          }
+        },
+        "/.well-known/health-check": {
+            "get": {
+                "summary": "Get health of the API.",
+                "operationId": "health_check",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/login": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login",
+                "operationId": "login",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LoginBody"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "JWT token",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Incorrect password",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/signup": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Sign up",
+                "operationId": "signup",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/SignupBody"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/weight/log_weight": {
+            "post": {
+                "tags": [
+                    "weight"
+                ],
+                "operationId": "log_weight",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LogWeightBody"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "LoginBody": {
-        "type": "object",
-        "required": [
-          "username",
-          "password"
-        ],
-        "properties": {
-          "password": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string"
-          }
+    },
+    "components": {
+        "schemas": {
+            "LogWeightBody": {
+                "type": "object",
+                "required": [
+                    "weight",
+                    "unit"
+                ],
+                "properties": {
+                    "unit": {
+                        "$ref": "#/components/schemas/WeightUnit"
+                    },
+                    "weight": {
+                        "type": "number",
+                        "format": "double"
+                    }
+                }
+            },
+            "LoginBody": {
+                "type": "object",
+                "required": [
+                    "email",
+                    "password"
+                ],
+                "properties": {
+                    "email": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                    }
+                }
+            },
+            "SignupBody": {
+                "type": "object",
+                "required": [
+                    "real_name",
+                    "email",
+                    "password"
+                ],
+                "properties": {
+                    "email": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                    },
+                    "real_name": {
+                        "type": "string"
+                    }
+                }
+            },
+            "WeightUnit": {
+                "type": "string",
+                "enum": [
+                    "LBs",
+                    "KGs"
+                ]
+            }
         }
-      },
-      "SignupBody": {
-        "type": "object",
-        "required": [
-          "real_name",
-          "username",
-          "email",
-          "password"
-        ],
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          },
-          "real_name": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string"
-          }
+    },
+    "tags": [
+        {
+            "name": "auth",
+            "description": "Authentication API endpoints"
         }
-      }
-    }
-  },
-  "tags": [
-    {
-      "name": "auth",
-      "description": "Authentication API endpoints"
-    }
-  ]
+    ]
 }
